--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ I AM INTERESTED IN WEB DEVELOPMENT AND ALSO IN C++,C AND PYTHON.</p>
 <li><a href="https://www.facebook.com/pramit.mondal.71/"><i class="fab fa-facebook"></i></a></li>
 <li><a href="https://twitter.com/PRAMITMONDAL12?t=soEfPUnF6gomlHeWM-yhzA&s=09"><i class="fa fa-twitter-square" aria-hidden="true"></i></a></li>
 <li><a href="https://www.linkedin.com/in/pramit-mondal-57694a217/"><i class="fab fa-linkedin"></i></a></li>
-<li><a href="https://github.com/pramitmondal"><i class="fab fa-github-alt"></i></a></li>
+<li><a href="https://github.com/pramit-mondal"><i class="fab fa-github-alt"></i></a></li>
 </ul>
 </div>
 </body>
